fix(v2): safe area top issue on iphone

--- a/front-v2/src/app/components/home/home.component.scss
+++ b/front-v2/src/app/components/home/home.component.scss
@@ -3,7 +3,7 @@
 
 .header {
   position: fixed;
-  top: 0;
+  top: env(safe-area-inset-top, 0);
   left: 0px;
   display: flex;
   justify-content: center;
